--- a/app/src/main/res/layout/fragment_bonus.xml
+++ b/app/src/main/res/layout/fragment_bonus.xml
@@ -37,9 +37,10 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:fontFamily="@font/alfa_slab_one"
-        android:text="123"
+        android:text="0"
         android:textColor="@color/to_right_color"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toStartOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="@+id/imageView" />
@@ -49,7 +50,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
-        android:text="Получайте Tcoin"
+        android:text="@string/get_coin"
         android:textColor="@color/to_right_color"
         android:textSize="28sp"
         android:textStyle="bold"
