--- a/app/src/main/res/layout/fragment_exchange.xml
+++ b/app/src/main/res/layout/fragment_exchange.xml
@@ -72,10 +72,24 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignTop="@+id/info"
+            android:layout_marginStart="8dp"
             android:layout_alignBottom="@+id/info"
             android:layout_marginBottom="0dp"
             android:layout_toStartOf="@+id/info"
             android:src="@drawable/ic_baseline_add_circle_outline_24"
+            android:textColor="@color/to_right_color"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <ImageView
+            android:id="@+id/exchange_room"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/share"
+            android:layout_alignBottom="@+id/share"
+            android:layout_marginBottom="0dp"
+            android:layout_toStartOf="@+id/share"
+            android:src="@drawable/ic_baseline_flip_camera_android_24"
             android:textColor="@color/to_right_color"
             android:textSize="18sp"
             android:textStyle="bold" />
