--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -18,10 +18,10 @@
         android:layout_alignParentTop="true"
         android:layout_centerInParent="true"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="82dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="24dp"
-        android:text="Войдите чтобы \nпродолжить"
+        android:text="Зарегистрируйтесь чтобы \nпродолжить"
         android:textColor="@color/to_right_color"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -71,29 +71,30 @@
         app:layout_constraintVertical_bias="0.085" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/loginBtn"
+        android:id="@+id/registerBtn"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
         android:layout_centerHorizontal="true"
         android:layout_margin="24dp"
+        android:layout_marginTop="24dp"
         android:background="@drawable/clear_item"
-        android:text="Войти"
-        app:layout_constraintTop_toBottomOf="@+id/paswordEdt" />
-
-    <TextView
-        android:id="@+id/register"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="12dp"
         android:text="@string/register"
-        android:textColor="@color/to_right_color"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/paswordEdt"
+        tools:layout_editor_absoluteX="24dp" />
 
+
+    <ImageView
+        android:id="@+id/backBtn"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_alignParentStart="true"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="12dp"
+        android:src="@drawable/ic_baseline_arrow_back_ios_24"
+        app:layout_constraintStart_toStartOf="@+id/tv"
+        app:layout_constraintTop_toTopOf="parent"
+        app:tint="@color/to_right_color" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
