--- a/app/src/main/res/layout/fragment_share.xml
+++ b/app/src/main/res/layout/fragment_share.xml
@@ -11,92 +11,165 @@
     tools:context=".presentation.fragments.ShareFragment">
 
 
-    <ScrollView
-        android:id="@+id/scroll"
+    <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:overScrollMode="never"
-        android:scrollbars="none">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/backBtn"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="start|center"
+            android:layout_margin="14dp"
+            android:src="@drawable/ic_baseline_chevron_left_24"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:tint="@color/to_right_color" />
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_gravity="center"
+            android:gravity="end"
+            android:orientation="horizontal">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end|center"
+                android:layout_marginEnd="12dp"
+                android:text="@string/price_of_share"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@+id/textView5"
+                app:layout_constraintEnd_toStartOf="@+id/imageView2"
+                app:layout_constraintTop_toTopOf="@+id/textView5" />
+
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end|center"
+                android:layout_marginEnd="4dp"
+                android:text="1"
+                android:textSize="22sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
+                app:layout_constraintEnd_toStartOf="@+id/imageView2"
+                app:layout_constraintTop_toTopOf="@+id/imageView2" />
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="end|center"
+                android:layout_marginEnd="16dp"
+                android:src="@drawable/ic_coin"
+                app:layout_constraintBottom_toTopOf="@+id/guid1"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.47" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <ScrollView
+        android:id="@+id/scroll"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:overScrollMode="never"
+        android:scrollbars="none"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:clipChildren="false"
+            android:clipToPadding="false"
+            android:orientation="vertical"
+            android:paddingBottom="16dp">
+
+
+            <EditText
+                android:id="@+id/titleEditText"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="62dp"
+                android:layout_margin="16dp"
+                android:background="@drawable/edit_text_style_2"
+                android:elevation="2dp"
+                android:hint="@string/title"
+                android:inputType="textPersonName"
+                android:lines="1"
+                android:maxLength="100"
+                android:maxLines="1"
+                android:paddingStart="24dp"
+                android:paddingEnd="24dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHeight_percent="0.085"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/guid1" />
 
-                <androidx.constraintlayout.widget.Guideline
-                    android:id="@+id/guid1"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal"
-                    app:layout_constraintGuide_end="612dp" />
+            <Spinner
+                android:id="@+id/spinner"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_margin="16dp"
+                android:elevation="4dp"
+                app:layout_constraintHeight_percent="0.07"
+                app:layout_constraintTop_toBottomOf="@+id/titleEditText" />
 
-                <ImageView
-                    android:id="@+id/backBtn"
+
+            <EditText
+                android:id="@+id/bodyEditText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="16dp"
+                android:background="@drawable/edit_text_style_2"
+                android:elevation="2dp"
+                android:gravity="start|top"
+                android:hint="@string/your_text"
+                android:inputType="textMultiLine"
+                android:maxLength="2000"
+                android:padding="24dp"
+                android:paddingTop="24dp"
+                android:paddingBottom="16dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHeight_percent="0.4"
+                app:layout_constraintStart_toStartOf="parent" />
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="end"
+                android:orientation="horizontal">
+
+                <com.skydoves.elasticviews.ElasticImageView
+                    android:id="@+id/clear_textBtn"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:layout_margin="14dp"
-                    android:src="@drawable/ic_baseline_chevron_left_24"
-                    app:layout_constraintBottom_toTopOf="@+id/guid1"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:tint="@color/to_right_color" />
-
-                <EditText
-                    android:id="@+id/titleEditText"
-                    android:layout_width="match_parent"
-                    android:layout_height="62dp"
-                    android:layout_margin="16dp"
-                    android:background="@drawable/edit_text_style_2"
-                    android:elevation="2dp"
-                    android:hint="@string/title"
-                    android:inputType="textPersonName"
-                    android:lines="1"
-                    android:maxLines="1"
-                    android:paddingStart="24dp"
-                    android:paddingEnd="24dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHeight_percent="0.085"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/guid1" />
-
-                <Spinner
-                    android:id="@+id/spinner"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_margin="16dp"
+                    android:layout_marginEnd="14dp"
+                    android:background="@drawable/clear_item"
                     android:elevation="4dp"
-                    app:layout_constraintHeight_percent="0.07"
-                    app:layout_constraintTop_toBottomOf="@+id/titleEditText" />
-
-                <RelativeLayout
-                    android:id="@+id/relativeLayout5"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintTop_toBottomOf="@+id/spinner">
-
-                    <EditText
-                        android:id="@+id/bodyEditText"
-                        android:layout_width="match_parent"
-                        android:layout_height="300dp"
-                        android:layout_marginStart="16dp"
-                        android:layout_marginTop="16dp"
-                        android:layout_marginEnd="16dp"
-                        android:layout_marginBottom="16dp"
-                        android:background="@drawable/edit_text_style_2"
-                        android:elevation="2dp"
-                        android:gravity="start|top"
-                        android:hint="@string/your_text"
-                        android:inputType="textMultiLine"
-                        android:padding="17dp"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHeight_percent="0.4"
-                        app:layout_constraintStart_toStartOf="parent" />
-
-                </RelativeLayout>
+                    android:padding="4dp"
+                    android:src="@drawable/ic_baseline_delete_outline_24"
+                    android:tint="@color/to_right_color"
+                    app:imageView_duration="200"
+                    app:layout_constraintBottom_toBottomOf="@+id/sendBtn"
+                    app:layout_constraintEnd_toStartOf="@+id/sendBtn"
+                    app:layout_constraintTop_toTopOf="@+id/sendBtn" />
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/sendBtn"
@@ -109,59 +182,7 @@
                     app:layout_constraintEnd_toEndOf="@+id/relativeLayout5"
                     app:layout_constraintTop_toBottomOf="@+id/relativeLayout5" />
 
-                <com.skydoves.elasticviews.ElasticImageView
-                    android:id="@+id/clear_textBtn"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_marginEnd="14dp"
-                    android:padding="4dp"
-                    app:imageView_duration="200"
-                    android:elevation="4dp"
-                    android:background="@drawable/clear_item"
-                    android:src="@drawable/ic_baseline_delete_outline_24"
-                    android:tint="@color/to_right_color"
-                    app:layout_constraintBottom_toBottomOf="@+id/sendBtn"
-                    app:layout_constraintEnd_toStartOf="@+id/sendBtn"
-                    app:layout_constraintTop_toTopOf="@+id/sendBtn" />
-
-                <TextView
-                    android:id="@+id/textView5"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="4dp"
-                    android:text="1"
-                    android:textSize="22sp"
-                    android:textStyle="bold"
-                    app:layout_constraintBottom_toBottomOf="@+id/imageView2"
-                    app:layout_constraintEnd_toStartOf="@+id/imageView2"
-                    app:layout_constraintTop_toTopOf="@+id/imageView2" />
-
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="24dp"
-                    android:text="@string/price_of_share"
-                    android:textSize="18sp"
-                    android:textStyle="bold"
-                    app:layout_constraintBottom_toBottomOf="@+id/textView5"
-                    app:layout_constraintEnd_toStartOf="@+id/imageView2"
-                    app:layout_constraintTop_toTopOf="@+id/textView5" />
-
-                <ImageView
-                    android:id="@+id/imageView2"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_marginEnd="16dp"
-                    android:src="@drawable/ic_coin"
-                    app:layout_constraintBottom_toTopOf="@+id/guid1"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.47" />
-
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
+            </LinearLayout>
 
         </LinearLayout>
     </ScrollView>
